--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -21,15 +21,18 @@
                         <viewLayoutGuide key="safeArea" id="j5V-Td-xb0"/>
                     </view>
                     <navigationItem key="navigationItem" id="kVF-hk-eGJ"/>
+                    <connections>
+                        <segue destination="EjC-1Q-Cv9" kind="show" id="vrG-st-rIq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zdE-EF-07S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98" y="0.0"/>
+            <point key="canvasLocation" x="-32" y="0.0"/>
         </scene>
-        <!--Title-->
+        <!--To Do List-->
         <scene sceneID="Zpc-GU-vKi">
             <objects>
-                <tableViewController storyboardIdentifier="TableViewController" id="EjC-1Q-Cv9" customClass="TableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TableViewController" id="EjC-1Q-Cv9" userLabel="To Do List" customClass="TableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="xPf-SV-PME">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -75,7 +78,7 @@
                             <outlet property="delegate" destination="EjC-1Q-Cv9" id="Jzb-Je-C1K"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="WU1-op-PcG">
+                    <navigationItem key="navigationItem" title="To Do List" id="WU1-op-PcG" userLabel="To Do List">
                         <barButtonItem key="leftBarButtonItem" title="Log out" id="G5d-CB-EkV">
                             <connections>
                                 <action selector="didTapSignOut:" destination="EjC-1Q-Cv9" id="Xrl-zc-liN"/>
@@ -90,9 +93,9 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lPD-hV-daZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="969" y="0.0"/>
+            <point key="canvasLocation" x="748" y="0.0"/>
         </scene>
-        <!--Add-->
+        <!--Add Task-->
         <scene sceneID="tSH-nk-Cxz">
             <objects>
                 <viewController id="P6n-J6-B55" customClass="AddViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
@@ -101,7 +104,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FqI-4F-rWv">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
@@ -119,7 +122,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="t1b-FU-oCf"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Add" id="LlM-mt-i70">
+                    <navigationItem key="navigationItem" title="Add Task" id="LlM-mt-i70">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2IQ-j0-3QS">
                             <connections>
                                 <action selector="cancel" destination="P6n-J6-B55" id="l2i-HM-dHQ"/>
@@ -138,7 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uh-V2-ctV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1663" y="0.0"/>
+            <point key="canvasLocation" x="1446" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SN6-zS-SEj">
