--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -38,33 +38,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="detailDisclosureButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Task" id="UfF-sF-W9O">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Task" id="UfF-sF-W9O">
                                 <rect key="frame" x="0.0" y="55.5" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UfF-sF-W9O" id="ogA-6I-uLr">
-                                    <rect key="frame" x="0.0" y="0.0" width="252" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" tag="999" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Uncheck" translatesAutoresizingMaskIntoConstraints="NO" id="xoy-JE-7yF">
+                                            <rect key="frame" x="15" y="7" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="6CP-TT-n4t"/>
+                                                <constraint firstAttribute="width" constant="30" id="pnL-eW-5tt"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dXZ-1W-uDB">
-                                            <rect key="frame" x="50" y="11.5" width="189" height="21"/>
+                                            <rect key="frame" x="50" y="11.5" width="265" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" tag="999" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Uncheck" translatesAutoresizingMaskIntoConstraints="NO" id="xoy-JE-7yF">
-                                            <rect key="frame" x="15" y="7" width="30" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="GS3-F7-Wcf"/>
-                                                <constraint firstAttribute="width" constant="30" id="R2t-9u-d1c"/>
-                                            </constraints>
-                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="dXZ-1W-uDB" firstAttribute="centerY" secondItem="ogA-6I-uLr" secondAttribute="centerY" id="9mW-Rk-GWo"/>
-                                        <constraint firstAttribute="bottom" secondItem="xoy-JE-7yF" secondAttribute="bottom" constant="6.5" id="Ffw-57-vRa"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="dXZ-1W-uDB" secondAttribute="trailing" constant="5" id="NHR-w3-nf2"/>
-                                        <constraint firstItem="dXZ-1W-uDB" firstAttribute="leading" secondItem="xoy-JE-7yF" secondAttribute="trailing" constant="5" id="TPc-b7-Qn9"/>
-                                        <constraint firstItem="xoy-JE-7yF" firstAttribute="leading" secondItem="ogA-6I-uLr" secondAttribute="leading" constant="15" id="UkO-ia-VLW"/>
+                                        <constraint firstItem="xoy-JE-7yF" firstAttribute="leading" secondItem="ogA-6I-uLr" secondAttribute="leading" constant="15" id="CHo-0a-SsW"/>
+                                        <constraint firstItem="dXZ-1W-uDB" firstAttribute="centerY" secondItem="ogA-6I-uLr" secondAttribute="centerY" id="Dbc-He-62c"/>
+                                        <constraint firstItem="dXZ-1W-uDB" firstAttribute="leading" secondItem="xoy-JE-7yF" secondAttribute="trailing" constant="5" id="DhL-n9-g57"/>
+                                        <constraint firstAttribute="trailing" secondItem="dXZ-1W-uDB" secondAttribute="trailing" constant="5" id="NJe-W4-ckd"/>
+                                        <constraint firstItem="xoy-JE-7yF" firstAttribute="centerY" secondItem="ogA-6I-uLr" secondAttribute="centerY" id="uvK-Vu-Kbu"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
